--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@astrojs/check": "^0.4.1",
     "@astrojs/preact": "^3.1.0",
     "@astrojs/tailwind": "^5.1.0",
+    "@astrojs/vercel": "^7.3.0",
     "astro": "^4.3.2",
     "preact": "^10.19.3",
     "tailwindcss": "^3.4.1",
