--- a/package.json
+++ b/package.json
@@ -11,11 +11,16 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.4.1",
-    "@astrojs/preact": "^3.1.0",
+    "@astrojs/preact": "^3.1.1",
+    "@astrojs/react": "^3.0.10",
     "@astrojs/tailwind": "^5.1.0",
     "@astrojs/vercel": "^7.3.0",
     "astro": "^4.3.2",
-    "preact": "^10.19.3",
+    "clsx": "^2.1.0",
+    "framer-motion": "^11.0.6",
+    "preact": "^10.19.6",
+    "react": "^18.2.0",
+    "tailwind-merge": "^2.2.1",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3"
   }
